--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="container text-center">
         <div class="row">
-          <div class="col-md-2 d-flex flex-column justify-content-center">
+          <div class="col-md-2 d-flex flex-column justify-content-center header">
             <div class="text-first-player rubik-font fs-2">
                 Player 1
             </div>
@@ -42,7 +42,7 @@
                 </div>
             </div>
           </div>
-          <div class="col-md-2 d-flex flex-column justify-content-center">
+          <div class="col-md-2 d-flex flex-column justify-content-center header">
             <div class="text-second-player rubik-font fs-2">
                 Player 2
             </div>
